[gd_scene load_steps=24 format=2]

[ext_resource path="res://code/Main.gd" type="Script" id=1]
[ext_resource path="res://code/GameCamera.gd" type="Script" id=2]
[ext_resource path="res://code/Player.gd" type="Script" id=3]
[ext_resource path="res://code/HUD.gd" type="Script" id=4]
[ext_resource path="res://scenes/game/Clearblock.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game/StatDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets_old/AAntiCorona-PKZx7.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets_old/hud/healthbar_back.png" type="Texture" id=8]
[ext_resource path="res://assets_old/hud/healthbar_fill.png" type="Texture" id=9]
[ext_resource path="res://assets_old/hud/healthbar_front.png" type="Texture" id=10]
[ext_resource path="res://assets_old/font.tres" type="DynamicFont" id=12]
[ext_resource path="res://code/AirBar.gd" type="Script" id=13]
[ext_resource path="res://scenes/PlayerInfo.tscn" type="PackedScene" id=15]
[ext_resource path="res://VInput/VPad.tscn" type="PackedScene" id=16]
[ext_resource path="res://VInput/VBtn.tscn" type="PackedScene" id=17]
[ext_resource path="res://code/game/LevelBuilder.gd" type="Script" id=18]
[ext_resource path="res://code/game/BlockHandler.gd" type="Script" id=19]
[ext_resource path="res://scenes/game/BGHandler.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets_old/game_ui/NavSide.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.3388, 30.3611 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 2
outline_color = Color( 0.211765, 0.258824, 0.219608, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 3
outline_color = Color( 0.294118, 0.34902, 0.309804, 1 )
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 83 )

[node name="Geemu" type="Node2D"]
script = ExtResource( 1 )

[node name="BGHandler" parent="." instance=ExtResource( 20 )]
position = Vector2( 323, -460 )
scale = Vector2( 1.6, 1.5 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Right" type="TextureRect" parent="Background"]
margin_left = 487.0
margin_right = 1207.0
margin_bottom = 2400.0
texture = ExtResource( 21 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Background"]
margin_left = 39.598
margin_top = 2400.0
margin_right = 759.598
margin_bottom = 4800.0
rect_rotation = 180.0
texture = ExtResource( 21 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clearblock" parent="." instance=ExtResource( 5 )]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 280, -20 )
z_index = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.0709839, 0.761536 )
shape = SubResource( 1 )

[node name="GameCamera" type="Camera2D" parent="Player"]
offset = Vector2( 0, -120 )
current = true
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Player/GameCamera"]

[node name="Tween" type="Tween" parent="Player"]

[node name="PlayerInfo" parent="Player" instance=ExtResource( 15 )]
visible = false
position = Vector2( 19.6219, -22.5949 )
scale = Vector2( 0.583778, 0.583778 )

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="HUD" type="MarginContainer" parent="Foreground"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/HUD"]
margin_right = 720.0
margin_bottom = 1080.0

[node name="InfoLabel" type="Label" parent="Foreground/HUD/VBoxContainer"]
margin_right = 720.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 12 )

[node name="DebugLabel" type="RichTextLabel" parent="Foreground/HUD/VBoxContainer"]
margin_top = 21.0
margin_right = 720.0
margin_bottom = 36.0
bbcode_enabled = true
bbcode_text = "AAA"
text = "AAA"
fit_content_height = true

[node name="AirBar" type="TextureProgress" parent="Foreground"]
margin_left = 563.661
margin_top = 648.308
margin_right = 659.661
margin_bottom = 840.308
rect_scale = Vector2( 0.75, 0.75 )
value = 100.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 9 )
fill_mode = 3
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="Foreground/AirBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -14.0
margin_right = 34.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Foreground/AirBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.7937
margin_top = -64.6829
margin_right = 24.2063
margin_bottom = -27.6829
custom_fonts/font = SubResource( 3 )
text = "Air"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatDisplay" parent="Foreground" instance=ExtResource( 6 )]
position = Vector2( 620, 300 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VPad" parent="CanvasLayer" instance=ExtResource( 16 )]
position = Vector2( 163.734, 954.236 )

[node name="VBtn" parent="CanvasLayer" instance=ExtResource( 17 )]
position = Vector2( 616.17, 979.855 )
scale = Vector2( 0.3, 0.3 )

[node name="LevelBuilder" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="BlockHandler" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="JeffWalls" type="Node2D" parent="."]
position = Vector2( 48, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftWall" type="StaticBody2D" parent="JeffWalls"]
position = Vector2( 30.0034, -43.3515 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="JeffWalls/LeftWall"]
shape = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="JeffWalls/LeftWall"]
visible = false
margin_left = -9.0
margin_top = -82.0
margin_right = 10.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightWall" type="StaticBody2D" parent="JeffWalls"]
position = Vector2( 510, -38.313 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="JeffWalls/RightWall"]
shape = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="JeffWalls/RightWall"]
visible = false
margin_left = -9.0
margin_top = -82.0
margin_right = 10.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="clear_level" from="." to="Player/GameCamera" method="_on_Geemu_clear_level"]
[connection signal="set_camera_max_height" from="." to="Player/GameCamera" method="_on_Geemu_set_camera_max_height"]
[connection signal="update_ui_value" from="." to="Foreground/StatDisplay" method="_on_update_ui_value"]
[connection signal="drill" from="Player" to="." method="_on_Player_drill"]
[connection signal="update_ui_value" from="Player" to="Foreground/StatDisplay" method="_on_update_ui_value"]
[connection signal="touch_press" from="CanvasLayer/VPad" to="Player" method="_on_VPad_touch_press"]
[connection signal="btn_press" from="CanvasLayer/VBtn" to="Player" method="_on_VBtn_btn_press"]
[connection signal="lb_ready" from="LevelBuilder" to="BlockHandler" method="_on_LevelBuilder_lb_ready"]
